--- a/.github/workflows/push-docker-smtp-relay.yml
+++ b/.github/workflows/push-docker-smtp-relay.yml
@@ -22,7 +22,7 @@ jobs:
         id: build-docker-image
         run: |
           ls -la
-          docker build . -f Dockerfile -t docker-smtp-relay:latest
+          docker build . -f Dockerfile -t joedafoe/docker-smtp-relay
       - name: push the docker image
         id: push-docker-image
         run: docker push ${{secrets.DOCKERHUB_USERNAME}}/docker-smtp-relay
